# Base-OOP

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: demo.py  generate_reports.py  scenario_data.py
src/banking/: __init__.py  enums.py  exceptions.py
src/banking/accounts/: __init__.py  base.py  investment.py  premium.py  savings.py
src/banking/audit/: __init__.py  log.py  risk.py
src/banking/core/: __init__.py  bank.py
src/banking/customers/: __init__.py  client.py
src/banking/reports/: __init__.py  builder.py
src/banking/transactions/: __init__.py  fx.py  models.py  processor.py  queue.py
