[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "banking"
version = "0.1.0"
description = "Modular OOP banking platform (accounts, transactions, audit, reports)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
